@startuml

title Decoratorパターンの例

abstract class Beverage {
    description
    getDescription()
    cost()
}

note left
 抽象コンポーネント
end note

abstract CondientDecorator {
    getDescription()
}

note left
抽象デコレータ
end note

class HouseBlend {
    cost()
}

class DarkRoast {
    cost()
}

class Decafe {
    cost()
}

class Espresso {
    cost()
}

note as Component
飲み物の具象コンポーネント
end note

class Milk {
    Beverage beverage
    cost()
    getDescription()
}

class Mocha {
    Beverage beverage
    cost()
    getDescription()
}

class Soy {
    Beverage beverage
    cost()
    getDescription()
}

class Whip {
    Beverage beverage
    cost()
    getDescription()
}

note as Decorator
トッピングの具象デコレータ
end note

HouseBlend.. Component
DarkRoast .. Component
Decafe .. Component
Espresso .. Component

Milk.. Decorator
Mocha.. Decorator
Whip.. Decorator
Soy.. Decorator

Beverage <-up-o CondientDecorator
Beverage -[hidden]up-o CondientDecorator
CondientDecorator <|-- Milk
CondientDecorator <|-- Mocha
CondientDecorator <|-- Whip
CondientDecorator <|-- Soy

Beverage <|--- HouseBlend
Beverage <|--- DarkRoast
Beverage <|--- Decafe
Beverage <|--- Espresso

@enduml